After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 720939 - GtkMenuButton direction = up isn't aligned correctly
GtkMenuButton direction = up isn't aligned correctly
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-12-22 16:26 UTC by William Jon McCann
Modified: 2014-01-06 19:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix positioning of up menu button popup (2.24 KB, patch)
2013-12-22 17:44 UTC, William Jon McCann
none Details | Review
Fix positioning of up menu button popup (5.53 KB, patch)
2014-01-06 18:55 UTC, William Jon McCann
committed Details | Review
tests: add some space to menubutton test (893 bytes, patch)
2014-01-06 18:55 UTC, William Jon McCann
committed Details | Review
tests: add menu alignments to the menubutton test (5.10 KB, patch)
2014-01-06 18:55 UTC, William Jon McCann
committed Details | Review

Description William Jon McCann 2013-12-22 16:26:52 UTC
Trying ./testmenubutton with GTK_ARROW_UP, the menu isn't positioned above the button as the docs suggest it should. It is popped over the button.
Comment 1 William Jon McCann 2013-12-22 17:44:39 UTC
Created attachment 264761 [details] [review]
Fix positioning of up menu button popup

Seems to work.
Comment 2 William Jon McCann 2014-01-06 18:55:45 UTC
Created attachment 265464 [details] [review]
Fix positioning of up menu button popup

Use the menu allocation instead of the request size.
Comment 3 William Jon McCann 2014-01-06 18:55:48 UTC
Created attachment 265465 [details] [review]
tests: add some space to menubutton test
Comment 4 William Jon McCann 2014-01-06 18:55:51 UTC
Created attachment 265466 [details] [review]
tests: add menu alignments to the menubutton test
Comment 5 William Jon McCann 2014-01-06 19:16:31 UTC
Attachment 265464 [details] pushed as 4b1838b - Fix positioning of up menu button popup
Attachment 265465 [details] pushed as b2dbcea - tests: add some space to menubutton test
Attachment 265466 [details] pushed as dae65b7 - tests: add menu alignments to the menubutton test