Fix positioning of up menu button popup

Use the menu allocation instead of the request size.

https://bugzilla.gnome.org/show_bug.cgi?id=720939